# alignmt

./: .gitignore  README.md  analyze_crosscoder.py  crosscoder_analysis.md  pyproject.toml  run_analysis.py
alignmt/weights/: __init__.py  compare.py  crosscoder.py  loader.py  trainer.py
examples/: model_diffing.py
feature_activations/: Qwen_Qwen2-1.5B_activations.pkl
feature_interpretation/: features.json  report.html  report.md
feature_interpretation/activations/: Qwen_Qwen2-1.5B_activations.pkl  comparison_activations.pkl  deepseek-ai_DeepSeek-R1-Distill-Qwen-1.5B_activations.pkl
feature_interpretation/capability_testing/: capability_evaluation.json
feature_interpretation/features/: feature_interpretation.json  layer_model_layers_10_features.pkl  layer_model_layers_11_features.pkl  layer_model_layers_12_features.pkl  layer_model_layers_13_features.pkl  layer_model_layers_14_features.pkl  layer_model_layers_15_features.pkl  layer_model_layers_16_features.pkl  layer_model_layers_17_features.pkl  layer_model_layers_9_features.pkl  named_features.pkl
feature_interpretation/reports/: model_comparison_report.md
ops/: __init__.py  reasoning_features.py
ops/crosscoder/: crosscode.py
ops/feature_interpreter/: README.md  __init__.py  capability_testing.py  decoder_analysis.py  example.py  (+10 more)
outputs/: analysis_results_batch_0.pt  analysis_results_batch_1.pt  analysis_results_batch_10.pt  analysis_results_batch_11.pt  analysis_results_batch_12.pt  analysis_results_batch_13.pt  analysis_results_batch_2.pt  analysis_results_batch_3.pt  analysis_results_batch_4.pt  analysis_results_batch_5.pt  analysis_results_batch_6.pt  analysis_results_batch_7.pt  analysis_results_batch_8.pt  analysis_results_batch_9.pt
tests/: test_crosscode.py  test_crosscoder.py  test_integration.py  test_loader.py
(+52 files in other folders)
