[project]
name = "alignmt"
version = "0.1.0"
description = "Model alignment and weight comparison tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alignmt"]

[tool.ruff]
line-length = 88
target-version = "py312"
