[project]
name = "alignmt"
version = "0.1.0"
description = "Model alignment and weight comparison tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.37.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alignmt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ops --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"
